--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </button>
 
             <div class="collapse navbar-collapse" id="Navbar">
-           <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+           <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="41"></a>
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span> Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
@@ -46,7 +46,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class="col-12 col-sm-3 align-self-center">
+                    <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-3 align-self-center">
+                    <a href="#reservation"><button type="button" class="btn btn-warning btn-sm">Reserve a Table</button></a>
                 </div>
             </div>
         </div>
@@ -58,8 +62,17 @@
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
             <div class="col col-sm order-sm-first col-md">
-                <h2>Uthappizza</h2>
-                <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center"
+                            src="img/uthappizza.png" alt="Uthappizza">
+                    <div class="media-body">
+                        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
+                        <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
+                            Italian pizza, topped with Cerignola olives, ripe vine
+                            cherry tomatoes, Vidalia onion, Guntur chillies and
+                            Buffalo Paneer.</p>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -69,8 +82,16 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center"
+                            src="img/buffet.png" alt="Buffet">
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person.</p>
+                    </div>
+                </div>
+
+
             </div>
         </div>
 
@@ -79,11 +100,95 @@
                 <h3>Meet our Culinary Specialists</h3>
             </div>
             <div class="col col-sm order-sm-first col-md">
-                <h2>Alberto Somayya</h2>
-                <h4>Executive Chef</h4>
-                <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center"
+                            src="img/alberto.png" alt="Alberto Somayya">
+                    <div class="media-body">
+                        <h2 class="mt-0">Alberto Somayya</h2>
+                        <h4>Executive Chef</h4>
+                        <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
+                            International experience having worked closely with
+                            whos-who in the culinary world, he specializes in
+                            creating mouthwatering Indo-Italian fusion experiences.
+                            </p>
+                    </div>
+                </div>
             </div>
         </div>
+
+        <div id="reservation" class="row row-content align-items-center">
+            <div class="col-12 col-sm-8 offset-sm-2">
+
+                <div class="card">
+
+                      <div class="card-header text-white bg-warning mb-3">Reserve a Table</div>
+
+                      <div class="card-body">
+                            <form>
+                                <div class="form-group row">
+                                    <label for="guests" class="col-sm-3 col-form-label">Number of Guests</label>
+                                    <div class="col-sm-6">
+                                        <div class="custom-control custom-radio custom-control-inline">
+                                            <input type="radio" id="guest1" name="guests" class="custom-control-input">
+                                            <label class="custom-control-label" for="guest1">1</label>
+                                        </div>
+                                        <div class="custom-control custom-radio custom-control-inline">
+                                            <input type="radio" id="guest2" name="guests" class="custom-control-input">
+                                            <label class="custom-control-label" for="guest2">2</label>
+                                        </div>
+                                        <div class="custom-control custom-radio custom-control-inline">
+                                            <input type="radio" id="guest3" name="guests" class="custom-control-input">
+                                            <label class="custom-control-label" for="guest3">3</label>
+                                        </div>
+                                        <div class="custom-control custom-radio custom-control-inline">
+                                            <input type="radio" id="guest4" name="guests" class="custom-control-input">
+                                            <label class="custom-control-label" for="guest4">4</label>
+                                        </div>
+                                        <div class="custom-control custom-radio custom-control-inline">
+                                            <input type="radio" id="guest5" name="guests" class="custom-control-input">
+                                            <label class="custom-control-label" for="guest5">5</label>
+                                        </div>
+                                        <div class="custom-control custom-radio custom-control-inline">
+                                            <input type="radio" id="guest6" name="guests" class="custom-control-input">
+                                            <label class="custom-control-label" for="guest6">6</label>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <div class="form-group row">
+                                    <label for="appointment" class="col-12 col-sm-3 col-form-label">Date and Time</label>
+                                    <div class="col-6 col-sm-3">
+                                        <input type="appointment" class="form-control" id="date" name="date" placeholder="Date">
+                                    </div>
+                                    <div class="col-6 col-sm-3">
+                                        <input type="appointment" class="form-control" id="time" name="time" placeholder="Time">
+                                    </div>
+                                </div>
+                        
+  
+                                <div class="form-group row">
+                                    <div class="col-12 offset-sm-3">
+                                        <button type="submit" class="btn btn-primary">Reserve</button>
+                                    </div>
+                                </div>
+
+
+                            </form>
+                        </div>
+
+            </div>
+
+       </div>
+
+
+
+                      </div>
+                </div>
+            </div>
+        </div>
+
+
+
     </div>
 
     <footer class="footer">
