--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
             <div class="col col-sm col-md">
                 <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center"
+                    <img class="d-flex ml-3 img-thumbnail align-self-center order-last"
                             src="img/buffet.png" alt="Buffet">
                     <div class="media-body">
                         <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
