--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@
                     <a data-toggle="modal" data-target="#loginModal">
                     <span class="fa fa-sign-in"></span> Login</a>
                 </span>
-
             </div>
-
-
         </div>
     </nav>
 
@@ -66,7 +63,8 @@
                             <div class="col-sm-auto">
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox">
-                                    <label class="form-check-label">Remember me</label>
+                                    <label class="form-check-label"> Remember me
+                                    </label>
                                 </div>
                             </div>
                         </div>
@@ -75,6 +73,82 @@
                             <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>        
                         </div>
                     </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="reservationModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                                    <form>
+                                        <div class="form-group row">
+                                            <label for="guests" class="col-12 col-sm-3 col-form-label">Number of Guests</label>
+                                            <div class="col-sm-auto">
+                                                <div class="custom-control custom-radio custom-control-inline">
+                                                    <input type="radio" id="guest1" name="guests" class="custom-control-input">
+                                                    <label class="custom-control-label" for="guest1">1</label>
+                                                </div>
+                                                <div class="custom-control custom-radio custom-control-inline">
+                                                    <input type="radio" id="guest2" name="guests" class="custom-control-input">
+                                                    <label class="custom-control-label" for="guest2">2</label>
+                                                </div>
+                                                <div class="custom-control custom-radio custom-control-inline">
+                                                    <input type="radio" id="guest3" name="guests" class="custom-control-input">
+                                                    <label class="custom-control-label" for="guest3">3</label>
+                                                </div>
+                                                <div class="custom-control custom-radio custom-control-inline">
+                                                    <input type="radio" id="guest4" name="guests" class="custom-control-input">
+                                                    <label class="custom-control-label" for="guest4">4</label>
+                                                </div>
+                                                <div class="custom-control custom-radio custom-control-inline">
+                                                    <input type="radio" id="guest5" name="guests" class="custom-control-input">
+                                                    <label class="custom-control-label" for="guest5">5</label>
+                                                </div>
+                                                <div class="custom-control custom-radio custom-control-inline">
+                                                    <input type="radio" id="guest6" name="guests" class="custom-control-input">
+                                                    <label class="custom-control-label" for="guest6">6</label>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group row">
+                                            <label for="section" class="col-12 col-sm-3 col-form-label">Section</label>
+                                                <div class="btn-group btn-group-toggle col-sm-auto" data-toggle="buttons">
+                                                  <label class="btn btn-secondary btn-success">
+                                                    <input type="radio" name="section" id="non-smoking" autocomplete="off" checked>Non-smoking
+                                                  </label>
+                                                  <label class="btn btn-secondary btn-danger">
+                                                    <input type="radio" name="section" id="smoking" autocomplete="off">Smoking
+                                                  </label>
+                                                </div>
+                                        </div>
+
+                                        <div class="form-group row">
+                                            <label for="appointment" class="col-12 col-sm-3 col-form-label">Date and Time</label>
+                                                <div class="col-6 col-sm-auto">
+                                                    <input type="appointment" class="form-control" id="date" name="date" placeholder="Date">
+                                                </div>
+                                                <div class="col-6 col-sm-auto">
+                                                    <input type="appointment" class="form-control" id="time" name="time" placeholder="Time">
+                                                </div>
+                                        </div>
+                                        <div class="form-row">
+                                            <div class="offset-sm-3">
+                                            <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                                            <button type="submit" class="btn btn-primary btn-sm ml-1">Reserve</button>
+                                            </div>     
+                                        </div>
+                                     </form>
+
+
+
                 </div>
             </div>
         </div>
@@ -92,12 +166,13 @@
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
                         <a role="button" class="btn btn-block nav-link btn-warning"
-                        data-toggle="tooltip" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
-                        data-placement="bottom" href="#reserveform">Reserve Table</a>
+                        data-toggle="modal" data-target="#reservationModal">Reserve Table</a>
                 </div>
             </div>
         </div>
     </header>
+
+
 
     <div class="container">
         <div class="row row-content align-items-center">
@@ -158,80 +233,6 @@
                 </div>
             </div>
         </div>
-
-        <div id="reservation" class="row row-content align-items-center">
-            <div class="col-12 col-sm-8 offset-sm-2">
-
-                <div class="card">
-
-                      <div class="card-header text-white bg-warning mb-3">Reserve a Table</div>
-
-                      <div class="card-body">
-                            <form>
-                                <div class="form-group row">
-                                    <label for="guests" class="col-sm-3 col-form-label">Number of Guests</label>
-                                    <div class="col-sm-6">
-                                        <div class="custom-control custom-radio custom-control-inline">
-                                            <input type="radio" id="guest1" name="guests" class="custom-control-input">
-                                            <label class="custom-control-label" for="guest1">1</label>
-                                        </div>
-                                        <div class="custom-control custom-radio custom-control-inline">
-                                            <input type="radio" id="guest2" name="guests" class="custom-control-input">
-                                            <label class="custom-control-label" for="guest2">2</label>
-                                        </div>
-                                        <div class="custom-control custom-radio custom-control-inline">
-                                            <input type="radio" id="guest3" name="guests" class="custom-control-input">
-                                            <label class="custom-control-label" for="guest3">3</label>
-                                        </div>
-                                        <div class="custom-control custom-radio custom-control-inline">
-                                            <input type="radio" id="guest4" name="guests" class="custom-control-input">
-                                            <label class="custom-control-label" for="guest4">4</label>
-                                        </div>
-                                        <div class="custom-control custom-radio custom-control-inline">
-                                            <input type="radio" id="guest5" name="guests" class="custom-control-input">
-                                            <label class="custom-control-label" for="guest5">5</label>
-                                        </div>
-                                        <div class="custom-control custom-radio custom-control-inline">
-                                            <input type="radio" id="guest6" name="guests" class="custom-control-input">
-                                            <label class="custom-control-label" for="guest6">6</label>
-                                        </div>
-                                    </div>
-                                </div>
-                                
-                                <div class="form-group row">
-                                    <label for="appointment" class="col-12 col-sm-3 col-form-label">Date and Time</label>
-                                    <div class="col-6 col-sm-3">
-                                        <input type="appointment" class="form-control" id="date" name="date" placeholder="Date">
-                                    </div>
-                                    <div class="col-6 col-sm-3">
-                                        <input type="appointment" class="form-control" id="time" name="time" placeholder="Time">
-                                    </div>
-                                </div>
-                        
-  
-                                <div class="form-group row">
-                                    <div class="col-12 offset-sm-3">
-                                        <button type="submit" class="btn btn-primary">Reserve</button>
-                                    </div>
-                                </div>
-
-
-                            </form>
-                        </div>
-
-            </div>
-
-       </div>
-
-
-
-                      </div>
-                </div>
-            </div>
-        </div>
-
-
-
     </div>
 
     <footer class="footer">
@@ -279,11 +280,6 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
-    <script>
-        $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
 
 </body>
 
