--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
                     <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul> 
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
-                    <span class="fa fa-sign-in"></span> Login</a>
+                    <a id="login"><span class="fa fa-sign-in"></span> Login</a>
                 </span>
             </div>
         </div>
@@ -165,8 +164,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                        <a role="button" class="btn btn-block nav-link btn-warning"
-                        data-toggle="modal" data-target="#reservationModal">Reserve Table</a>
+                        <a role="button" class="btn btn-block nav-link btn-warning" id="reserve">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -353,6 +351,18 @@
 
         });
     </script> -->
+
+    <script>
+
+        $("#reserve").click(function () {
+            $('#reservationModal').modal('toggle')
+        });
+
+        $("#login").click(function () {
+            $('#loginModal').modal('toggle')
+        });
+
+    </script>
 
     <!--Our carousel has a class span which is the icon-->
 
